--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,7 @@
         Manage Recipe<span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Shopping list</a> </li>
+        <li><a href="#" (click)="sendToList()">Shopping list</a> </li>
         <li><a href="#">Edit Recipe</a> </li>
         <li><a href="#">Delete Recipe</a> </li>
       </ul>
