--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -8,7 +8,9 @@
             type="text"
             id="name"
             class="form-control"
-            #nameInput>
+            name="name"
+            required
+            ngModel>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
@@ -16,25 +18,29 @@
             type="number"
             id="amount"
             class="form-control"
-            #amountInput>
+            name="amount"
+            required
+            pattern="^[1-9]+[0-9]*$"
+            ngModel>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <button
             class="btn btn-success"
-            type="button"
-            (click)="onAddItem()">Add
-            <!--type="submit"-->
+            type="submit"
+            [disabled]="!f.valid"
+          >{{ editMode ? 'Update' : 'Add' }}
           </button>
           <button
             class="btn btn-danger"
             type="button"
-            (click)="onDelete()">Delete
+            (click)="onDelete()" *ngIf="editMode">Delete
           </button>
           <button
             class="btn btn-primary"
-            type="button">Clear
+            type="button"
+            (click)="onClear()">Clear
           </button>
         </div>
       </div>
