--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -19,7 +19,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image URL</label>
-            <input type="text" id="imagePath" class="form-control" formControlName="imagePath">
+            <input type="text" id="imagePath" class="form-control" formControlName="imagePath" #imagePath>
           </div>
         </div>
       </div>
@@ -35,6 +35,11 @@
       <div class="row">
         <div
           class="col-xs-12"
+          formArrayName="imagePath">
+          <img [src]="imagePath.value" class="img-responsive">
+        </div>
+        <div
+          class="col-xs-12"
           formArrayName="ingredients">
           <div
             class="row"
@@ -48,7 +53,7 @@
               <input type="number" class="form-control" formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button type="button" class="btn btn-danger">X</button>
+              <button type="button" class="btn btn-danger" (click)="onDeleteIngredient(i)">X</button>
             </div>
           </div>
           <hr>
@@ -62,4 +67,5 @@
     </form>
   </div>
 </div>
+
 
