implemented a basic authentication

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,13 @@
         <li routerLinkActive="active"><a [routerLink]="['/shopping-list']">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+          <li><a routerLink="/signup">Register</a></li>
+          <li><a routerLink="/signin">Log In</a></li>
+        </ng-template>
+        <li><a style="cursor: pointer;" (click)="onLogout()" *ngIf="authService.isAuthenticated()">Logout</a></li>
         <li class="dropdown" appDropdown>
-          <a class="dropdown-toggle" role="button" style="cursor: pointer">Manage <span class="caret"></span></a>
+          <a class="dropdown-toggle" role="button" style="cursor: pointer" *ngIf="authService.isAuthenticated()">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
             <li><a style="cursor: pointer" (click)="onFetchData()">Fetch Data</a></li>
