--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,19 +3,19 @@
     <div class="navbar-header">
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
-    <div class="collapse navbar-collapse">
+    <div class="navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
         <li routerLinkActive="active"><a [routerLink]="['/shopping-list']">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!authService.isAuthenticated()">
+        <ng-template [ngIf]="!isAuthenticated()">
           <li><a routerLink="/signup">Register</a></li>
           <li><a routerLink="/signin">Log In</a></li>
         </ng-template>
-        <li><a style="cursor: pointer;" (click)="onLogout()" *ngIf="authService.isAuthenticated()">Logout</a></li>
+        <li><a style="cursor: pointer;" (click)="onLogout()" *ngIf="isAuthenticated()">Logout</a></li>
         <li class="dropdown" appDropdown>
-          <a class="dropdown-toggle" role="button" style="cursor: pointer" *ngIf="authService.isAuthenticated()">Manage <span class="caret"></span></a>
+          <a class="dropdown-toggle" role="button" style="cursor: pointer" *ngIf="isAuthenticated()">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
             <li><a style="cursor: pointer" (click)="onFetchData()">Fetch Data</a></li>
